<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.camera.view.PreviewView
            android:id="@+id/previewView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="3:4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:id="@+id/fadeView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#fff"
            app:layout_constraintDimensionRatio="3:4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/photoView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            app:layout_constraintDimensionRatio="3:4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image"/>
        <ImageView
            android:id="@+id/overlayView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            app:layout_constraintDimensionRatio="3:4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/bounding_boxes"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
            <Button
                android:id="@+id/sessionButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/start_session"
                android:layout_marginEnd="20dp"/>
            <Button
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/analyze_image" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/press_start"
                android:textSize="16sp" />
        </ScrollView>
    </LinearLayout>
</LinearLayout>